need to fix the white space smh

--- a/style.css
+++ b/style.css
@@ -8,7 +8,10 @@ Author: UTSGhost
     font-weight: 200;
     font-style: normal;
 }
-
+body {
+    margin: 0;
+    padding: 0;
+}
 :root {
     overflow-x: hidden;
     overflow-y: auto;
@@ -17,6 +20,7 @@ Author: UTSGhost
     font-family: 'Nunito', Verdana, Geneva, Tahoma, sans-serif;
     color: rgb(211, 211, 211); 
     font-weight: bold;
+    
 }
 @media screen and (max-width: 1212px) {
     :root{
@@ -36,7 +40,10 @@ table {
     position: absolute;
     top:0px;
     left:0px;
-    flex-direction: row;
+    height: fit-content;
+}
+#mt{
+    height:fit-content;
 }
 .mid, h1 {
     font-size: 50px;
@@ -216,6 +223,9 @@ table{
   }
   html {
     scroll-behavior: smooth;
+    margin:0;
+    padding:0;
+    max-height:100vh !important;
   }
 
 .malbutton {
